Potential fix for scroll bug on mobile

--- a/v1.css
+++ b/v1.css
@@ -32,11 +32,14 @@ body {
 }
 
 .content-container {
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+html, body, .content-container {
+    height: 100%;
 }
 
 h1 {
